# iheat

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: codeql.yml  python-tests.yml
git-hooks/: mypy.ini  pylint.ini  pylint_init.ini
iheat/: __init__.py  _geocode.py
test/: test_environment.py  test_geocode.py
