[tool.poetry]
name = "iheat"
version = "0.1.0"
description = "A basic library to calculate heat index"
authors = ["Francesco Parisio <francesco.parisio@protonmail.com>"]
packages = [
    { include = "iheat"},
]

[tool.poetry.dependencies]
python = "~3.9.5"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
pylint = "^2.17.4"
mypy = "^1.4.1"
black = "^23.7.0"
isort = "^5.12.0"
pre-commit-hooks = "^4.4.0"
pydocstyle = "^6.3.0"
flake8 = "^6.0.0"
toml = "^0.10.2"
types-toml = "^0.10.8"
pytest-cov = "^4.1.0"
coverage-badge = "^1.1.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
